--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+        <version>2.7.3</version>
+        <relativePath />
+      </parent>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
