--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.error.include-exception=true
 server.error.include-stacktrace=always
-server.port = 8082
+server.port = 8085
 spring.mandatory-file-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=truelogging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
