--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.http.encoding.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=truelogging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.profiles.active=prod
